fix: adding the name of the jar file in script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-
+      
       - name: Build with Maven
         run: mvn clean package -DskipTests
+        
+      - name: Rename JAR to fixed name
+        run: cp target/*.jar target/app.jar
 
       - name: Copy jar and deployement script to server
         uses: appleboy/scp-action@v0.1.7
