--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,19 +20,23 @@ jobs:
       
       - name: Build with Maven
         run: mvn clean package -DskipTests
-        
-      - name: Rename JAR to fixed name
-        run: cp target/*.jar target/app.jar
 
-      - name: Copy jar and deployement script to server
+      - name: Copy jar file to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          source: |
-             target/app.jar
-             deploy.sh
+          source: "target/*.jar"
+          target: "~/app/"
+
+      - name: Copy deployement script to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "deploy.sh"
           target: "~/app/"
 
       - name: Configure environment and restart app
